--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -34,6 +36,10 @@
             android:label="选择铃声" />
 
         <activity android:name=".reminder.AlarmActivity" />
+
+        <activity
+            android:name=".quicknote.AddNoteActivity"
+            android:label="新建笔记" />
 
         <receiver android:name=".common.utils.AlarmReceiver">
             <intent-filter>
