--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
         <activity
             android:name=".translate.TransLateMoreActivity"
             android:label="编辑"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".reminder.HistoryActivity"
+            android:label="已完成" />
 
         <receiver android:name=".common.utils.AlarmReceiver">
             <intent-filter>
